2016-03-08  Julien Bect  <julien.bect@centralesupelec.fr>

	Make it possible to update heteroscedastic models

	* core/@stk_model_gpposterior/set_lognoisevariance.m: Provide a
	more informative error message when the size is wrong. Add unit
	tests.
	* core/@stk_model_gpposterior/stk_model_update.m: Handle the
	heteroscedastic case thanks to a new input argument. Provide
	informative error messages. Add unit tests.
	* sampling/@stk_sampcrit_modelbased/stk_model_update.m: Pass the
	additional input argument, unchaged.
	* sampling/@stk_sampcrit_thresholdbasedoptim/stk_model_update.m:
	Idem.

2016-03-06  Julien Bect  <julien.bect@centralesupelec.fr>

	Define and use three datasets based on TwoBumps

	* examples/datasets/stk_dataset_twobumps.m: New function, which
	defines three datasets based on TwoBumps.
	* examples/01_kriging_basics/stk_example_kb01.m: Use dataset
	'noiseless'. Move the noisy case to stk_example_kb01n.
	* examples/01_kriging_basics/stk_example_kb01n.m: New example
	script, which corresponds to the noisy case of the previous
	version of stk_example_kb01.
	* examples/01_kriging_basics/stk_example_kb02.m: Use dataset
	'noiseless'. Move the noisy case to stk_example_kb02n.
	* examples/01_kriging_basics/stk_example_kb02n.m: New example
	script, which corresponds to the noisy case of the previous
	version of stk_example_kb02.
	* examples/01_kriging_basics/stk_example_kb04.m: This example no
	longer exists (replaced by /stk_example_kb02n).
	* examples/01_kriging_basics/stk_example_kb05.m: Use dataset
	'noiseless'.
	* examples/01_kriging_basics/stk_example_kb08.m: Idem.
	* examples/01_kriging_basics/stk_example_kb05.m: Use dataset
	'noisy2'.
	* stk_init.m: Add examples/datasets to the path.
	* admin/octpkg/INDEX: Update index.

	Give a name (TwoBumps) to our oldest test function

	* examples/test_functions/stk_testfun_twobumps.m: Our oldest test
	function now as its own M-file and a name.
	* examples/01_kriging_basics/stk_example_kb01.m: Use the newly